--- a/app/src/main/res/layout/activity_province.xml
+++ b/app/src/main/res/layout/activity_province.xml
@@ -21,7 +21,7 @@
     <EditText
         android:id="@+id/et_search"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="360dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_back"
@@ -32,11 +32,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_provinces"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/et_search"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/province_item"
         tools:itemCount="3"/>
 
